--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,50 +1,10 @@
-<!DOCTYPE html>
-<html>
-    {% include head.html %}
-    <body id="page-top" class="index">
-    {% include project_nav.html %}
-	{% include post_header.html %}
-	<section id="posts">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					{{ content }}
-					<h3>Related Posts</h3>
-					<ul>
-					{% for post in site.posts %}
-						{% if page.categories[0] == post.categories[0] %}
-							<li><a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%b %-d, %Y" }}</li>
-						{% endif %}
-					{% endfor %}
-					</ul>
-					<h3>Comments</h3>
-					<div id="disqus_thread"></div>
-					<script>
-					/**
-					* RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-					* LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
-					*/
-					/*
-					var disqus_config = function () {
-					this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
-					this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-					};
-					*/
-					(function() { // DON'T EDIT BELOW THIS LINE
-					var d = document, s = d.createElement('script');
-					
-					s.src = '//jamesfmackenzie.disqus.com/embed.js';
-					
-					s.setAttribute('data-timestamp', +new Date());
-					(d.head || d.body).appendChild(s);
-					})();
-					</script>
-					<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-				</div>
-			</div>
-		</div>
-	</section>
-    {% include footer.html %}
-    {% include js.html %}
-    </body>
-</html>
+{% include _head.html %}
+{% include _header.html %}
+<main>
+<article class="post">
+  <h1><a href="{{ site.url }}{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></h1>
+  <p class="small gray"><time datetime="{{ page.date | date: "%Y-%m-%d"}}">{{ page.date | date_to_long_string }}</time></p>
+  {{ content }}
+</article>
+</main>
+{% include _footer.html %}
