--- a/style.css
+++ b/style.css
@@ -1,3 +1,66 @@
----
-layout: style
----
+@import url(//fonts.googleapis.com/css?family=Inconsolata:400,700|Montserrat:700);
+
+body {
+  font-family: Inconsolata, sans-serif;
+  font-size: 1.25em;
+  line-height: 1.5em;
+  color: #111;
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6  {
+  font-family: Montserrat, sans-serif;
+}
+
+a { 
+  text-decoration: none;
+  color: #111;
+}
+
+a:hover {
+  background-color: #000;
+  color: #fff;
+}
+
+.wrap {
+  width: 90%;
+  max-width: 40em;
+  margin: 0 auto;
+  padding: 2em 5% 4em 5%;
+}
+
+img { 
+  max-width: 100%;
+  margin: 0 auto;
+  display: block;
+}
+
+.youtube-container {
+  position: relative;
+  width: 95%;
+  margin: 0 auto;
+  height: 0;
+  padding-bottom: 56.25%;
+  overflow: hidden;
+}
+
+.youtube-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+header {
+  background-image: url("/img/bg.png");
+  border-top: 2em solid #000;
+  border-bottom: 2em solid #000;
+}
+
+hr {
+  height: 0.25em;
+  width: 50%;
+  background-color: #000;
+  margin: 4em auto;
+}
