--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
 <head>
   <meta charset="utf-8">
-  <title>{{site.name}}</title>
+  <title>{{site.name}} - {{site.description}}</title>
   <meta name="author" content="{{site.author}}">
   <meta name="description" content="{{site.description}}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
