--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,9 @@
-{% include _head.html %}
+{% include _pagehead.html %}
 {% include _header.html %}
 <main>
 <article class="post">
   <h1><a href="{{ site.url }}{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></h1>
-  <p class="small gray"><time datetime="{{ page.date | date: "%Y-%m-%d"}}">{{ page.date | date_to_long_string }}</time></p>
+  <p class="small gray"><time datetime="{{ page.date | date: "%Y-%m-%d"}}">{{ page.date | date: "%b %-d, %Y" }}</time></p>
   {{ content }}
 </article>
 </main>
