--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ h1, h2, h3, h4, h5, h6  {
   font-family: Montserrat, sans-serif;
 }
 
+h1 {
+  margin-top: 2em;
+}
+
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   text-decoration: none;
 }
