Minor style adjustment
Minor style adjustment

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
   {{ content }}
   
   
-  <h2>Comments</h2>
+  <h2 style="padding-top:1.5em;">Comments</h2>
   <div id="disqus_thread"></div>
 <script>
 
